--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <a href="http://www.w3school.com.cn/" target="_blank">Visit W3School!</a>
 
-<p>如果把链接的 target 属性设置为 "_blank"，该链接会在新窗口中打开。</p>
+<p>神说：要有光</p>
 
 </body>
 
