--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<html>
-
+！<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-
-<a href="http://www.w3school.com.cn/" target="_blank">Visit W3School!</a>
-
-<p>神说：要有光</p>
-
+    hello, I am LiCan.
 </body>
-
 </html>
