--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-！<html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebGL Circle</title>
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        canvas {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
-    hello, I am LiCan.
+    <canvas id="glCanvas" width="500" height="500"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
